--- a/Todo.txt
+++ b/Todo.txt
@@ -8,7 +8,7 @@
 Allt som allt:
 // ? Detta i Rotmappen...
 1 product backlog = Innehåller ALLT som ska göras, delas upp över sprintar
-1 burndown Chart = uppdateras vartefter (versionhantera alla ändringar..)
+( burndown Chart = uppdateras vartefter (versionhantera alla ändringar..) ) //Skrivs för var sprint..
 1 Samlade user-stories
 1 Projektetnamn samt info om det (hur mkt 1 sprint är, etc)
 
